# Receptionist

./: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: desktop-release.yml
config/businesses/: example-contacts.yaml  example-dental.yaml  example-workers-comp.yaml  santiago-contacts.yaml  santiago.yaml
desktop/: appointment_email.js  appointment_menu.js  index.html  main.js  preload.js  renderer.js  styles.css
desktop/assets/: icon.icns
desktop/oauth/: google-calendar-oauth-client.json
documentation/: CHANGELOG.md  architecture.md  chatgpt-oauth-setup.md  configuration-reference.md  deployment-guide.md  development-guide.md  function-tools-reference.md  google-calendar-setup.md  index.md  multi-business-setup.md  reminders-setup.md  ringcentral-setup.md  telephony-setup.md  troubleshooting.md
receptionist/: agent.py  config.py  desktop_config.py  lifecycle.py  prompts.py  voice_auth.py
receptionist/booking/: __main__.py  auth.py  availability.py  booking.py  client.py  models.py  setup_cli.py
receptionist/email/: smtp.py  (+4 more)
scripts/: after-pack.js  agent-status.ps1  build-python-runtime.js  desktop-dev.js  install-hooks.sh  pre-commit  restart-agent.ps1
tests/: MANUAL.md  conftest.py  test_agent_helpers.py  test_agent_input_limits.py  test_config.py  test_desktop_config.py  test_end_call.py  test_lifecycle.py  test_messages.py  test_prompts.py  test_receptionist_on_enter.py  test_receptionist_transfer_call.py  test_voice_auth.py  test_voice_idle.py  test_voice_setup_cli.py
(+63 files in other folders)
